# python_validation_package

./: .gitignore  BUILD_PACKAGE.md  LICENSE  README.md  pyproject.toml  requirements.txt  sample.py
src/validation_package_cn/: __init__.py  exceptions.py  schema_validator.py  validation_exception.py  validations.py  validator.py
