[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "validation_package_cn"
version = "0.0.1"
authors = [
  { name="Chau Nguyen", email="nhchau89@gmail.com" },
]
description = "A Python validation package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
keywords = ["validation"]

[project.urls]
Homepage = "https://github.com/Chau-NH/python_validation_package"
Issues = "https://github.com/Chau-NH/python_validation_package/issues"